fixed broken nav-bar links

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <header>
         <div id = 'logo-container'>
-            <a href="gallery.html"><img id = 'logo' src="img/Logo.PNG" alt="XO Beauty Brows"></a>
+            <a href="index.html"><img id = 'logo' src="img/Logo.PNG" alt="XO Beauty Brows"></a>
         </div>
         <nav>
             <ul id = 'nav-bar'>
-                <li><a class = 'home nav-text' href="gallery.html">HOME</a></li>
+                <li><a class = 'home nav-text' href="index.html">HOME</a></li>
                 <li><a class = 'nav-text' href="services.html">SERVICES</a></li>
                 <li><a class = 'nav-text'>APPOINTMENTS</a></li>
                 <li><a class = 'nav-text' href="faq.html">POLICIES & FAQ</a></li>
