--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
                         <br>
                         <li><a class = 'nav-text' href="services.html">SERVICES</a></li>
                         <br>
-                        <li><a class = 'nav-text' href="https://visibook.com/xobeautybrows">APPOINTMENTS</a></li>
+                        <li><a class = 'nav-text'>APPOINTMENTS</a></li>
                         <br>
                         <li><a class = 'nav-text' href="faq.html">POLICIES & FAQ</a></li>
                         <br>
