removed footer text

--- a/faq.html
+++ b/faq.html
@@ -146,8 +146,8 @@
                 <a class = 'social-icons' target="_blank" href="https://www.facebook.com/xoBeautyBrows/"><i class="fab fa-facebook-square"></i></a>
                 <a class = 'social-icons' target="_blank" href="https://www.yelp.com/biz/xobeautybrows-alhambra"><i class="fab fa-yelp"></i></a>
             </span>
-            <span id = 'xobrows'></span>
-            <span id = 'chung'>Created by <a target="_blank" href="https://www.linkedin.com/in/chung-au/">Chung Au</a></span>
+            <!-- <span id = 'xobrows'></span>
+            <span id = 'chung'>Created by <a target="_blank" href="https://www.linkedin.com/in/chung-au/">Chung Au</a></span> -->
         </div>
     </footer>
 
