stylized hamburger navigation items

--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@
                         <br>
                         <li><a class = 'nav-text'>APPOINTMENTS</a></li>
                         <br>
-                        <li><a class = 'nav-text' href="faq.html">POLICIES & FAQ</a></li>
+                        <li><a class = 'faq nav-text' href="faq.html">POLICIES & FAQ</a></li>
                         <br>
                         <li><a class = 'nav-text' href="contact.html">CONTACT ME</a></li>
                         <br>
