--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <nav>
                     <ul id = 'drop-down' class = 'hide'>
                         <br>
-                        <li><a class = 'nav-text' href="index.html">HOME</a></li>
+                        <li><a class = 'home nav-text' href="index.html">HOME</a></li>
                         <br>
                         <li><a class = 'nav-text' href="services.html">SERVICES</a></li>
                         <br>
