--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                         <br>
                         <li><a class = 'nav-text' href="faq.html">POLICIES & FAQ</a></li>
                         <br>
-                        <li><a class = 'nav-text' href="contact.html">CONTACT ME</a></li>
+                        <li><a class = 'contact nav-text' href="contact.html">CONTACT ME</a></li>
                         <br>
                     </ul>
                 </nav>
