--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                         <br>
                         <li><a class = 'nav-text' href="index.html">HOME</a></li>
                         <br>
-                        <li><a class = 'nav-text' href="services.html">SERVICES</a></li>
+                        <li><a class = 'services nav-text' href="services.html">SERVICES</a></li>
                         <br>
                         <li><a class = 'nav-text'>APPOINTMENTS</a></li>
                         <br>
