adjust services page for mobile

--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
 
     <main id = 'services-container'>
         <figure id = 'cards-container'>
-            <div class = 'cards'>
+            <div id = 'ombre' class = 'cards'>
                 <img src="img/service img/ombre.jpg" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Ombre Powder</h1>
@@ -94,7 +94,7 @@
                     <h3>$450</h3>
                 </div>
             </div>
-            <div class = 'cards'>
+            <div id = 'microblading' class = 'cards'>
                 <img src="img/service img/microblade.jpg" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Microblading</h1>
@@ -105,7 +105,7 @@
                     <h3>$450</h3>
                 </div>
             </div>
-            <div class = 'cards'>
+            <div id = 'combo' class = 'cards'>
                 <img src="img/service img/combination.jpg" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Combination</h1>
@@ -117,7 +117,7 @@
                     <h3>$500</h3>
                 </div>
             </div>
-            <div class = 'cards'>
+            <div id = 'saline' class = 'cards'>
                 <img src="img/service img/saline.JPG" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Saline Tattoo Removal</h1>
@@ -129,7 +129,7 @@
                     <h3>$150/session</h3>
                 </div>
             </div>
-            <div class = 'cards'>
+            <div id = 'correction' class = 'cards'>
                 <img src="img/service img/correct.JPG" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Correction</h1>
@@ -139,7 +139,7 @@
                     <h3>$525</h3>
                 </div>
             </div>
-            <div class = 'cards'>
+            <div id = 'touchup' class = 'cards'>
                 <img src="img/service img/touchup.JPG" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Touch Ups</h1>
@@ -148,7 +148,7 @@
                     <h3>Varies</h3>
                 </div>
             </div>
-            <div class = 'cards' id ='training-card'>
+            <div id ='training-card' class = 'cards'>
                 <img src="img/service img/teach.png" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Training</h1>
