fixed faq margins

--- a/faq.html
+++ b/faq.html
@@ -97,11 +97,12 @@
                     <p>A $100 non-refundable deposit is required to secure your booking.</p>
                     <p>This deposit will go towards your service and the remainder of the balance will be paid on the day of service.</p>
                     <br>
-                    <a href="https://visibook.com/xobeautybrows" target="_blank">Book your appoint here.</a>
-                    <br><br>
-                    <p>Send your deposit to:</p>
-                    <p>VENMO: <a href="https://venmo.com/Crystalhanxo" target="_blank">Crystalhanxo</a></p>
-                    <p>ZELLE: hancrystal101@yahoo.com</p>
+                    <p><a href="https://visibook.com/xobeautybrows" target="_blank">Book your appoint here.</a></p>
+                    <br>
+                    <p id = 'send'>Send your deposit to:</p>
+                    <p id = 'venmo'> VENMO: <a href="https://venmo.com/Crystalhanxo" target="_blank">Crystalhanxo</a></p>
+                    <br>
+                    <p id = 'zelle'>ZELLE: hancrystal101@yahoo.com</p>
                 </div>
                 <div class = 'faq-info hidden cancellations'>
                     <p>Kindly give us a 72 hour notice if you’re unable to keep your original appointment (Within the next 7 days - your deposit can be used to reschedule for a later date). Notices given after 72 hours will result in a lost of your deposit and another $100 will be required to reschedule your next appointment.</p>
