added montserrat font and adjusted page sizes

--- a/faq.html
+++ b/faq.html
@@ -18,6 +18,7 @@
     <!-- Google Fonts -->    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antic+Didone&family=Mr+De+Haviland&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -100,6 +101,7 @@
                     <p><a href="https://visibook.com/xobeautybrows" target="_blank">Book your appoint here.</a></p>
                     <br>
                     <p id = 'send'>Send your deposit to:</p>
+                    <br>
                     <p id = 'venmo'> VENMO: <a href="https://venmo.com/Crystalhanxo" target="_blank">Crystalhanxo</a></p>
                     <br>
                     <p id = 'zelle'>ZELLE: hancrystal101@yahoo.com</p>
