changed contacts design

--- a/contact.html
+++ b/contact.html
@@ -89,8 +89,8 @@
             </div>
             <div id = 'socials-form'>
                 <ul>
-                    <li><i class="fas fa-phone"></i>     <b>Phone Number:</b> (626) 838-3677 </li>
-                    <li><i class="far fa-envelope"></i> <b>Email:</b> xoBeautyBrows@gmail.com</li>
+                    <li><i class="fas fa-phone"></i>      (626) 838-3677 </li>
+                    <li><i class="far fa-envelope"></i>  xoBeautyBrows@gmail.com</li>
                     <li><a class = 'social-icons' target="_blank" href="https://www.instagram.com/xobeautybrows/"><i class="social-icon fab fa-instagram"></i>    <b>Instagram</b></a></li>
                     <li><a class = 'social-icons' target="_blank" href="https://www.facebook.com/xoBeautyBrows/"><i class="fab fa-facebook-square"></i>    <b>Facebook</b></a></li>
                     <li><a class = 'social-icons' target="_blank" href="https://www.yelp.com/biz/xobeautybrows-alhambra"><i class="fab fa-yelp"></i>    <b>Yelp</b></a></li>
