--- a/services.html
+++ b/services.html
@@ -169,7 +169,7 @@
                     <p>Fully loaded kit, including a wireless machine & supplies for practicing and your first +10 clients</p>
                     <p>Support to assure you become a successful artist</p>
                     <p>*Please contact us for more information*</p>
-                    <h3><a href="contact.html">CONTACT ME</a></h3>
+                    <h3 id = 'contact-link'><a href="contact.html">CONTACT ME</a></h3>
                 </div>
             </div>
         </figure>
