fixed up mobile view of appointment form

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             </span>
         </div>
         <br>
-        <p>Please make sure to read up on the <a href="faq.html"><b>Policies & FAQ</b></a> section.</p>
+        <p>Please make sure to read up on the <a href="faq.html"><b>Policies & FAQ</b></a>.</p>
         <br>
         <form action="https://visibook.com/xobeautybrows" method="post" enctype="text/plain">
             <input type="checkbox" id="verify" name="verify" value="read" required>
-                <label for="verify">I have read the <a href="faq.html">policies & FAQ</a> section.</label>
+                <label for="verify">I have read the <a href="faq.html">policies & FAQ</a>.</label>
                 <br><br>
             <div id ='submit-container'>
                 <input type="submit" name="">
