--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
             </span>
         </div>
         <br>
-        <p>Please make sure to read up on the <a href="faq.html"><b>Policies & FAQ</b></a> section.</p>
+        <p>Please make sure to read up on the <a href="faq.html"><b>Policies & FAQ</b></a>.</p>
         <br>
         <form action="https://visibook.com/xobeautybrows" method="post" enctype="text/plain">
             <input type="checkbox" id="verify" name="verify" value="read" required>
