users cant zoom

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta name="description" content="Welcome to xoBeautyBrows located in Los Angeles, CA (San Gabriel Valley). We are certified in permanent makeup and specialize in micro-pigmentation tattoos for eyebrows such as Ombre Powder, Microblading or a Combination of both and also Lip Blush that lasts 1-3 years. Our mission is to enhance women & men’s beauty and power them to feel more confident than they already are.
 
     We also provide intimate training for those that would like to get started in their permanent makeup journey. 
