--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
         <br>
         <form action="https://visibook.com/xobeautybrows" method="post" enctype="text/plain">
             <input type="checkbox" id="verify" name="verify" value="read" required>
-                <label for="verify">I have read the <a href="faq.html">policies & FAQ</a> section.</label>
+                <label for="verify">I have read the <a href="faq.html">policies & FAQ</a>.</label>
                 <br><br>
             <div id ='submit-container'>
                 <input type="submit" name="">
