new booking link

--- a/faq.html
+++ b/faq.html
@@ -34,7 +34,7 @@
             <ul id = 'nav-bar'>
                 <li><a class = 'nav-text' href="index.html">HOME</a></li>
                 <li><a class = 'nav-text' href="services.html">SERVICES</a></li>
-                <li><a class = 'nav-text' href="https://visibook.com/xobeautybrows">APPOINTMENTS</a></li>
+                <li><a class = 'nav-text' href="https://xobeautybrows.schedulista.com/">APPOINTMENTS</a></li>
                 <li><a class = 'faq nav-text' href="faq.html">POLICIES & FAQ</a></li>
                 <li><a class = 'nav-text' href="contact.html">CONTACT ME</a></li>
             </ul>
