--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
         <br>
         <p>Please make sure to read up on the <a href="faq.html"><b>Policies & FAQ</b></a>.</p>
         <br>
-        <form action="https://xobeautybrows.schedulista.com/" method="post" enctype="text/plain">
+        <form action="https://visibook.com/xobeautybrows" method="post" enctype="text/plain">
             <input type="checkbox" id="verify" name="verify" value="read" required>
                 <label for="verify">I have read the <a href="faq.html">policies & FAQ</a>.</label>
                 <br><br>
