--- a/faq.html
+++ b/faq.html
@@ -69,6 +69,7 @@
                 <h3 class = 'title'>Cancellations</h3>
                 <h3 class = 'title'>Before Care</h3>
                 <h3 class = 'title'>After Care</h3>
+                <h3 class = 'title'>COVID-19</h3>
             </div>
             <br><br>
             <div id = 'faq-info-wrap'>
@@ -138,6 +139,16 @@
                         <li>Avoid direct sun exposure or tanning for 3-4 weeks</li>
                         <li>Don't rub, pick, or scratch your brows. Let the dry skin naturally fall off</li>
                     </ul>
+                </div>
+                <div class = 'faq-info hidden covid'>
+                    <p><b>Below are the studio’s protocols:</b></p>
+                    <br>
+                    <ol>
+                        <li>No guests are allowed therefore, please arrive alone.</li>
+                        <li>Call me when you arrive 626-838-3677. Stay in your car. I will let you know when to come in.</li>
+                        <li>Please enter with your mask on. There will be a contactless temperature check.</li>
+                        <li>You’ll be directed to our washing station to wash your hands before we start.</li>
+                    </ol>
                 </div>
             </div>
         </div>
