--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
                         <br>
                         <li><a class = 'nav-text' href="services.html">SERVICES</a></li>
                         <br>
-                        <li><a class = 'nav-text'>APPOINTMENTS</a></li>
+                        <li><a class = 'nav-text' href="https://xobeautybrows.schedulista.com/">APPOINTMENTS</a></li>
                         <br>
                         <li><a class = 'faq nav-text' href="faq.html">POLICIES & FAQ</a></li>
                         <br>
