--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
             <ul id = 'nav-bar'>
                 <li><a class = 'nav-text' href="index.html">HOME</a></li>
                 <li><a class = 'services nav-text' href="services.html">SERVICES</a></li>
-                <li><a class = 'nav-text'>APPOINTMENTS</a></li>
+                <li><a class = 'nav-text' href="https://xobeautybrows.schedulista.com/">APPOINTMENTS</a></li>
                 <li><a class = 'nav-text' href="faq.html">POLICIES & FAQ</a></li>
                 <li><a class = 'nav-text' href="contact.html">CONTACT ME</a></li>
             </ul>
@@ -49,7 +49,7 @@
                         <br>
                         <li><a class = 'services nav-text' href="services.html">SERVICES</a></li>
                         <br>
-                        <li><a class = 'nav-text'>APPOINTMENTS</a></li>
+                        <li><a class = 'nav-text' href="https://xobeautybrows.schedulista.com/">APPOINTMENTS</a></li>
                         <br>
                         <li><a class = 'nav-text' href="faq.html">POLICIES & FAQ</a></li>
                         <br>
