--- a/faq.html
+++ b/faq.html
@@ -100,7 +100,7 @@
                     <p>A $100 non-refundable deposit is required to secure your booking.</p>
                     <p>This deposit will go towards your service and the remainder of the balance will be paid on the day of service.</p>
                     <br>
-                    <p><a href="https://visibook.com/xobeautybrows" target="_blank">Book your appoint here.</a></p>
+                    <p><a href="https://xobeautybrows.schedulista.com/" target="_blank">Book your appoint here.</a></p>
                     <br>
                     <p id = 'send'>Send your deposit to:</p>
                     <br>
