--- a/contact.html
+++ b/contact.html
@@ -110,9 +110,9 @@
                 </form>
             </div>
         </div>
-        <iframe id = 'map' title='2023 S Primrose Ave  Alhambra, CA 91803' 
+        <iframe id = 'map' title='7771 Garvey Ave Unit D Rosemead, CA 91770' 
         src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBv4d7x6la_XrKCaNz8o98sFE6HLX0hynw
-        &q=2023 S Primrose Ave  Alhambra, CA 91803" allowfullscreen>
+        &q=7771 Garvey Ave D Rosemead, CA 91770" allowfullscreen>
         </iframe>
     </main>
     
