--- a/services.html
+++ b/services.html
@@ -92,6 +92,7 @@
                     <p>Can opt for natural finish or makeup finish.</p>
                     <p>Suitable for all skin types (Oily, Combination, Normal, Dry).</p>
                     <p>Lasts 1-3 years.</p>
+                    <p>Does not include touch-ups</p>
                     <h3>$450</h3>
                 </div>
             </div>
@@ -103,6 +104,7 @@
                     <p>Great for those with a good amount of hair.</p>
                     <p>Suitable for only normal to dry skin.</p>
                     <p>Lasts 1-2 years.</p>
+                    <p>Does not include touch-ups</p>
                     <h3>$450</h3>
                 </div>
             </div>
@@ -115,6 +117,7 @@
                     <p>Can opt for natural finish or makeup finish.</p>
                     <p>Suitable for all skin types (Oily, Combination, Normal, Dry).</p>
                     <p>Lasts 1-3 years.</p>
+                    <p>Does not include touch-ups</p>
                     <h3>$500</h3>
                 </div>
             </div>
