--- a/services.html
+++ b/services.html
@@ -87,12 +87,11 @@
                 <img src="img/service img/ombre.jpg" alt="">
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Ombre Powder</h1>
-                    <p>Gradient Powder Effect. Starts light in the front and gradually gets darker towards the fail.</p>
+                    <p>Gradient Powder Effect. Starts light in the front and gradually gets darker towards the tail.</p>
                     <p>Great for those with no eyebrows, sparse eyebrows, or full eyebrows.</p>
                     <p>Can opt for natural finish or makeup finish.</p>
                     <p>Suitable for all skin types (Oily, Combination, Normal, Dry).</p>
-                    <p>Lasts 1-3 years.</p>
-                    <p>Does not include touch-ups</p>
+                    <p>Lasts 1-3 years. Does not include touch-ups</p>
                     <h3>$450</h3>
                 </div>
             </div>
@@ -103,8 +102,7 @@
                     <p>Hairstrokes to replicate real hair. Very natural look.</p>
                     <p>Great for those with a good amount of hair.</p>
                     <p>Suitable for only normal to dry skin.</p>
-                    <p>Lasts 1-2 years.</p>
-                    <p>Does not include touch-ups</p>
+                    <p>Lasts 1-2 years. Does not include touch-ups</p>
                     <h3>$450</h3>
                 </div>
             </div>
@@ -116,8 +114,7 @@
                     <p>Great for those with no eyebrows, sparse eyebrows, or full eyebrows.</p>
                     <p>Can opt for natural finish or makeup finish.</p>
                     <p>Suitable for all skin types (Oily, Combination, Normal, Dry).</p>
-                    <p>Lasts 1-3 years.</p>
-                    <p>Does not include touch-ups</p>
+                    <p>Lasts 1-3 years. Does not include touch-ups</p>
                     <h3>$500</h3>
                 </div>
             </div>
@@ -149,6 +146,14 @@
                     <h1 class = 'card-titles'>Touch Ups</h1>
                     <p>Touch ups are only for my existing clients.</p>
                     <p>Send me an email/text/dm to book this option.</p>
+                    <h4>Pricing is as follows:</h4>
+                    <ul>
+                        <li>1-6 Months: $125</li>
+                        <li>6-12 Months: $175</li>
+                        <li>1-2 Years: $250</li>
+                        <li>2-3 Years: $350</li>
+                        <li>3+ Years: $450</li>
+                    </ul>
                     <h3>Varies</h3>
                 </div>
             </div>
@@ -157,20 +162,24 @@
                 <div class = 'card-text'>
                     <h1 class = 'card-titles'>Training</h1>
                     <p>Two types of training available.</p>
-                    <p>Learn <u><b>ONE</b></u> technique (Ombre or Microblading) or <u><b>BOTH</b></u> techniques (Ombre & Microblading)</p>
+                    <p>Learn <u><b>ONE</b></u> technique (Ombre or Microblading) or <u><b>ALL</b></u> techniques (Ombre, Microblading & Combination)</p>
                     <p>No experience necessary</p>
-                    <p>Our course comes with:</p>
-                    <p>An in-depth manual & introduction to permanent mankeup.</p>
-                    <p>Brow mapping with correct method & tools</p>
-                    <p>Business 101: How to get your business started & how to market it</p>
-                    <p>List of suppliers</p>
-                    <p>Proper Sanitation & Safety</p>
-                    <p>Color theory & correction</p>
-                    <p>A chance to work on a live model with our close supervision (provided)</p>
-                    <p>One-day shadowing opportunity after the course</p>
-                    <p>A certificate of completion</p>
-                    <p>Fully loaded kit, including a wireless machine & supplies for practicing and your first +10 clients</p>
-                    <p>Support to assure you become a successful artist</p>
+                    <p>We offer small intimate classes with only 1-2 students so we can focus on giving each student more attention</p>
+                    <h4>Our course comes with:</h4>
+                    <ul>
+                        <li>An in-depth manual & introduction to permanent mankeup.</li>
+                        <li>Brow mapping with correct method & tools</li>
+                        <li>Business 101: How to get your business started & how to market it</li>
+                        <li>List of suppliers</li>
+                        <li>Proper Sanitation & Safety</li>
+                        <li>Color theory & correction</li>
+                        <li>A chance to work on a live model with our close supervision (provided)</li>
+                        <li>One-day shadowing opportunity after the course</li>
+                        <li>A certificate of completion</li>
+                        <li>Fully loaded kit, including a wireless machine & supplies for practicing and your first +10 clients</li>
+                        <li>Support to assure you become a successful artist</li>
+                    </ul>
+                    <p>*Bed Rental is available*</p>
                     <p>*Please contact us for more information*</p>
                     <h3 id = 'contact-link'><a href="contact.html">CONTACT ME</a></h3>
                 </div>
