--- a/faq.html
+++ b/faq.html
@@ -93,7 +93,7 @@
                         <li>Had botox in the past 2 months (we recommend doing microblading first)</li>
                         <li>Users of Accutane, antasure and steroids in the past year</li>
                         <li>Under doctor's care/taking medication. Please message us first.</li>
-                        <li>HAVE PREVIOUS SEMI-PERMENENT MAKEUP- PLEASE SEND US A CLEAR PICTURE OF YOUR BARE BROWS FOR CONSIDERATION</li>
+                        <li>Have previous permanent makeup on your eyebrows. If you do, please send us a clear picture of your eyebrows without any makeup for consideration before booking. If you booked without our approval and we are unable to correct your eyebrows, it will result in a loss of your deposit.</li>
                     </ul>
                 </div>
                 <div class = 'faq-info hidden booking'>
@@ -109,9 +109,19 @@
                     <p id = 'zelle'>ZELLE: hancrystal101@yahoo.com</p>
                 </div>
                 <div class = 'faq-info hidden cancellations'>
-                    <p>Kindly give us a 72 hour notice if you’re unable to keep your original appointment (Within the next 7 days - your deposit can be used to reschedule for a later date). Notices given after 72 hours will result in a lost of your deposit and another $100 will be required to reschedule your next appointment.</p>
+                    <h4>Rescheduling & Cancellations</h4>
+                    <p>Unforeseen circumstances may arise that could force you to reschedule your appointment.</p>
+                    <p>Kindly give us a 72-hour notice if you’re unable to keep your original appointment (Within the next 7 days - your deposit can be used to reschedule for a later date). Notices given after 72 hours will result in a lost of your deposit and another $100 will be required to reschedule your next appointment.</p>
                     <br>
-                    <p>If you choose to cancel you will forfeit your deposit.</p>
+                    <p>Notices given after 72 hours will result in a loss of your deposit and another $100 will be required to reschedule your next appointment</p>
+                    <ul>
+                        <li>If you choose to cancel, you will forfeit your deposit</li>
+                        <li>15+ minutes of tardiness will result in cancellation of your appointment. Rebooking will require another deposit</li>
+                        <li>No shows will result in no further bookings</li>
+                        <li>If you fail to inform us of any violations of the Before Care(above) policies, it will result in a loss of deposit</li>
+                        <li>If you are sick with the flu, have a slight cough or any symptoms related to Covid-19, or been in contact with a Covid-positive person, please let me know so we can reschedule (Contact me at 626-838-3677). There will be a one-time courtesy deposit waive for covid-related rescheduling. Proof of a negative Covid-test result will be needed before rescheduling.</li>
+                        <li>If you show up sick or show any signs of Covid-19 symptoms, your appointment will be cancelled and your deposit will be forfeited.</li>
+                    </ul>
                     <br>
                     <p>If you fail to show up to your complimentary touch up or give at least 72 hour notice, your touch up will no longer be complementary upon rescheduling. A $50 fee will be required to reschedule.</p>
                 </div>
