--- a/services.html
+++ b/services.html
@@ -146,15 +146,13 @@
                     <h1 class = 'card-titles'>Touch Ups</h1>
                     <p>Touch ups are only for my existing clients.</p>
                     <p>Send me an email/text/dm to book this option.</p>
-                    <h4>Pricing is as follows:</h4>
-                    <ul>
-                        <li>1-6 Months: $125</li>
-                        <li>6-12 Months: $175</li>
-                        <li>1-2 Years: $250</li>
-                        <li>2-3 Years: $350</li>
-                        <li>3+ Years: $450</li>
-                    </ul>
-                    <h3>Varies</h3>
+                    <br>
+                    <h3Pricing is as follows:</h4>
+                        <p>1-6 Months: $125</p
+                        <p>6-12 Months: $175</p
+                        <p>1-2 Years: $250</p
+                        <p>2-3 Years: $350</p
+                        <p>3+ Years: $450</p
                 </div>
             </div>
             <div id ='training-card' class = 'cards'>
@@ -166,19 +164,17 @@
                     <p>No experience necessary</p>
                     <p>We offer small intimate classes with only 1-2 students so we can focus on giving each student more attention</p>
                     <h4>Our course comes with:</h4>
-                    <ul>
-                        <li>An in-depth manual & introduction to permanent mankeup.</li>
-                        <li>Brow mapping with correct method & tools</li>
-                        <li>Business 101: How to get your business started & how to market it</li>
-                        <li>List of suppliers</li>
-                        <li>Proper Sanitation & Safety</li>
-                        <li>Color theory & correction</li>
-                        <li>A chance to work on a live model with our close supervision (provided)</li>
-                        <li>One-day shadowing opportunity after the course</li>
-                        <li>A certificate of completion</li>
-                        <li>Fully loaded kit, including a wireless machine & supplies for practicing and your first +10 clients</li>
-                        <li>Support to assure you become a successful artist</li>
-                    </ul>
+                        <p>An in-depth manual & introduction to permanent mankeup.</p>
+                        <p>Brow mapping with correct method & tools</p>
+                        <p>Business 101: How to get your business started & how to market it</p>
+                        <p>List of suppliers</p>
+                        <p>Proper Sanitation & Safety</p>
+                        <p>Color theory & correction</p>
+                        <p>A chance to work on a live model with our close supervision (provided)</p>
+                        <p>One-day shadowing opportunity after the course</p>
+                        <p>A certificate of completion</p>
+                        <p>Fully loaded kit, including a wireless machine & supplies for practicing and your first +10 clients</p>
+                        <p>Support to assure you become a successful artist</p>
                     <p>*Bed Rental is available*</p>
                     <p>*Please contact us for more information*</p>
                     <h3 id = 'contact-link'><a href="contact.html">CONTACT ME</a></h3>
