--- a/services.html
+++ b/services.html
@@ -147,7 +147,7 @@
                     <p>Touch ups are only for my existing clients.</p>
                     <p>Send me an email/text/dm to book this option.</p>
                     <br>
-                    <h3Pricing is as follows:</h4>
+                    <h3>Pricing is as follows:</h3>
                         <p>1-6 Months: $125</p
                         <p>6-12 Months: $175</p
                         <p>1-2 Years: $250</p
