--- a/services.html
+++ b/services.html
@@ -147,12 +147,12 @@
                     <p>Touch ups are only for my existing clients.</p>
                     <p>Send me an email/text/dm to book this option.</p>
                     <br>
-                    <h3>Pricing is as follows:</h3>
-                        <p>1-6 Months: $125</p
-                        <p>6-12 Months: $175</p
-                        <p>1-2 Years: $250</p
-                        <p>2-3 Years: $350</p
-                        <p>3+ Years: $450</p
+                    <h4>Pricing is as follows:</h4>
+                    <p>1-6 Months: $125</p>
+                    <p>6-12 Months: $175</p>
+                    <p>1-2 Years: $250</p>
+                    <p>2-3 Years: $350</p>
+                    <p>3+ Years: $450</p>
                 </div>
             </div>
             <div id ='training-card' class = 'cards'>
