--- a/faq.html
+++ b/faq.html
@@ -65,6 +65,7 @@
         <div id = 'faq-title-wrap'>
             <div id = 'faq-titles'>
                 <h3 class = 'title' style="color: pink">Qualifications</h3>
+                <h3 class = 'title'>Touch Ups</h3>
                 <h3 class = 'title'>Booking</h3>
                 <h3 class = 'title'>Cancellations</h3>
                 <h3 class = 'title'>Before Care</h3>
@@ -98,6 +99,12 @@
                     <br>
                     <br>
                     <br>
+                </div>
+                <div class = 'faq-info hidden touchUp'>
+                    <p>Touch Ups are not included with your initial session.</p>
+                    <p>Touch Ups are recommended within 6 months, but vary per client</p>
+                    <p>It is the client's responsibility to book touch ups accordingly</p>
+                    <p>Please be sure to send a picture to check if you do need a touch up</p>
                 </div>
                 <div class = 'faq-info hidden booking'>
                     <p>A $100 non-refundable deposit is required to secure your booking.</p>
