--- a/faq.html
+++ b/faq.html
@@ -101,10 +101,12 @@
                     <br>
                 </div>
                 <div class = 'faq-info hidden touchUp'>
-                    <p>Touch Ups are not included with your initial session.</p>
-                    <p>Touch Ups are recommended within 6 months, but vary per client</p>
-                    <p>It is the client's responsibility to book touch ups accordingly</p>
-                    <p>Please be sure to send a picture to check if you do need a touch up</p>
+                    <ul>
+                        <li>Touch Ups are not included with your initial session.</li>
+                        <li>Touch Ups are recommended within 6 months, but vary per client</li>
+                        <li>It is the client's responsibility to book touch ups accordingly</li>
+                        <li>Please be sure to send a picture to check if you do need a touch up</li>
+                    </ul>
                 </div>
                 <div class = 'faq-info hidden booking'>
                     <p>A $100 non-refundable deposit is required to secure your booking.</p>
