--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Antic+Didone&family=Mr+De+Haviland&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-    <!-- Font Awesome -->
+    <!-- Font Awesome lul 4/22/23 -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </head>
 
