--- a/services.html
+++ b/services.html
@@ -156,6 +156,15 @@
                     <p>3+ Years: $450</p>
                 </div>
             </div>
+            <div id = 'scalp' class = 'cards'>
+                <img src="img/service img/ombre.jpg" alt="">
+                <div class = 'card-text'>
+                    <h1 class = 'card-titles'>Ombre Powder</h1>
+                    <p>Touch up your hairline and fill out your scalp with Scalp MP.</p>
+                    <p>Great for those with that want a new hairline or fuller-looking hair.</p>
+                    <h3>$250/session</h3>
+                </div>
+            </div>
             <div id ='training-card' class = 'cards'>
                 <img src="img/service img/teach.png" alt="">
                 <div class = 'card-text'>
